--- a/package.json
+++ b/package.json
@@ -1,64 +1,70 @@
 {
-	"name": "leaderboard",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"project": "trichter",
-	"scripts": {
-		"dev": "vite dev",
-		"start": "node build",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint .",
-		"test:unit": "vitest",
-		"test": "npm run test:unit -- --run"
-	},
-	"devDependencies": {
-		"@eslint/compat": "^1.3.1",
-		"@eslint/js": "^9.30.1",
-		"@sveltejs/adapter-auto": "^6.0.1",
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.22.2",
-		"@sveltejs/vite-plugin-svelte": "^5.1.0",
-		"@tailwindcss/vite": "^4.1.11",
-		"@types/pg": "^8.15.4",
-		"@vitest/browser": "^3.2.4",
-		"daisyui": "^5.0.43",
-		"drizzle-kit": "^0.31.4",
-		"eslint": "^9.30.1",
-		"eslint-config-prettier": "^10.1.5",
-		"eslint-plugin-svelte": "^3.10.1",
-		"globals": "^16.3.0",
-		"i": "^0.3.7",
-		"playwright": "^1.53.2",
-		"prettier": "^3.6.2",
-		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.13",
-		"svelte": "^5.35.2",
-		"svelte-check": "^4.2.2",
-		"sveltekit-sse": "^0.13.19",
-		"tailwindcss": "^4.1.11",
-		"tsx": "^4.20.3",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.35.1",
-		"vite": "^6.3.5",
-		"vitest": "^3.2.4",
-		"vitest-browser-svelte": "^0.1.0"
-	},
-	"dependencies": {
-		"@lucide/svelte": "^0.525.0",
-		"@sentry/sveltekit": "^9",
-		"better-auth": "^1.2.12",
-		"dotenv": "^17.0.1",
-		"drizzle-orm": "^0.44.2",
-		"pg": "^8.16.3",
-		"pino": "^9.7.0",
-		"pino-loki": "^2.6.0",
-		"pino-pretty": "^13.0.0",
-		"prom-client": "^15.1.3"
-	}
+  "name": "leaderboard",
+  "private": true,
+  "version": "0.0.0-development",
+  "type": "module",
+  "project": "trichter",
+  "scripts": {
+    "dev": "vite dev",
+    "start": "node build",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "format": "prettier --write .",
+    "lint": "prettier --check . && eslint .",
+    "test:unit": "vitest",
+    "test": "npm run test:unit -- --run",
+    "semantic-release": "semantic-release"
+  },
+  "devDependencies": {
+    "@eslint/compat": "^1.3.1",
+    "@eslint/js": "^9.30.1",
+    "@sveltejs/adapter-auto": "^6.0.1",
+    "@sveltejs/adapter-node": "^5.2.12",
+    "@sveltejs/kit": "^2.22.2",
+    "@sveltejs/vite-plugin-svelte": "^5.1.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/pg": "^8.15.4",
+    "@vitest/browser": "^3.2.4",
+    "daisyui": "^5.0.43",
+    "drizzle-kit": "^0.31.4",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-svelte": "^3.10.1",
+    "globals": "^16.3.0",
+    "i": "^0.3.7",
+    "playwright": "^1.53.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "svelte": "^5.35.2",
+    "svelte-check": "^4.2.2",
+    "sveltekit-sse": "^0.13.19",
+    "tailwindcss": "^4.1.11",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.1",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4",
+    "vitest-browser-svelte": "^0.1.0",
+    "semantic-release": "^24.2.6"
+  },
+  "dependencies": {
+    "@lucide/svelte": "^0.525.0",
+    "@sentry/sveltekit": "^9",
+    "better-auth": "^1.2.12",
+    "dotenv": "^17.0.1",
+    "drizzle-orm": "^0.44.2",
+    "pg": "^8.16.3",
+    "pino": "^9.7.0",
+    "pino-loki": "^2.6.0",
+    "pino-pretty": "^13.0.0",
+    "prom-client": "^15.1.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tt-trichter/app.git"
+  }
 }
