ci: update workflow permissions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       packages: write
-      contents: read
+      contents: write
       attestations: write
       id-token: write
 
@@ -24,9 +24,6 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
-
-      - name: Format code
-        run: npm run format
 
       - name: Lint code
         run: npm run lint
