--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,19 @@ services:
     ports:
       - '8081:8080'
 
+  minio:
+    image: minio/minio
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: password
+    volumes:
+      - miniodata:/data
+    command: server /data --console-address ":9001"
+
 volumes:
   pgdata:
+  miniodata:
