--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
 		"@types/bcrypt": "^5.0.2",
 		"bcrypt": "^6.0.0",
 		"better-auth": "^1.2.12",
+		"crypto": "^1.0.1",
 		"dotenv": "^17.0.1",
 		"drizzle-orm": "^0.44.2",
 		"lucide-svelte": "^0.525.0",
+		"minio": "^8.0.5",
 		"pg": "^8.16.3",
 		"pino": "^9.7.0",
 		"pino-loki": "^2.6.0",
