refactor: improve code quality

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,26 @@
-DATABASE_URL=postgres://postgres:postgres@db:5432/trichterdb
-BETTER_AUTH_SECRET=a6oVpDqumrqE9N7mCQAd3uhG9HxxhvLU
-BETTER_AUTH_URL=https://trichter.hauptspeicher.com/
+TRAEFIK_BASIC_AUTH=
+TRAEFIK_BASE_URL=localhost
+
+DATABASE_URL=
+
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=
+
+PUBLIC_GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+SENTRY_DSN=
+SENTRY_AUTH_TOKEN=
+
+STORAGE_PROVIDER=
+
+MINIO_BASE_URL=
+MINIO_PORT=
+MINIO_ROOT_USER=
+MINIO_ROOT_PASSWORD=
+MINIO_BUCKET_NAME=
+
+AZURE_STORAGE_CONNECTION_STRING=
+AZURE_CONTAINER_NAME=
+
+PUBLIC_IMAGE_BASE_URL=
