--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@tailwindcss/vite": "^4.1.11",
 		"@types/pg": "^8.15.4",
+		"@vite-pwa/sveltekit": "^1.0.0",
 		"@vitest/browser": "^3.2.4",
 		"daisyui": "^5.0.43",
 		"drizzle-kit": "^0.31.4",
@@ -49,8 +50,10 @@
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.35.1",
 		"vite": "^6.3.5",
+		"vite-plugin-pwa": "^1.0.1",
 		"vitest": "^3.2.4",
-		"vitest-browser-svelte": "^0.1.0"
+		"vitest-browser-svelte": "^0.1.0",
+		"workbox-window": "^7.3.0"
 	},
 	"dependencies": {
 		"@azure/identity": "^4.10.2",
