--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,10 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.13",
+		"@semantic-release/changelog": "^6.0.3",
+		"@semantic-release/git": "^10.0.1",
+		"@semantic-release/github": "^10.0.6",
+		"@semantic-release/npm": "^12.0.1",
 		"semantic-release": "^24.2.6",
 		"svelte": "^5.35.2",
 		"svelte-check": "^4.2.2",
